# mg

./: README.md  README.org  parser.out  parsetab.py  pyproject.toml
mg/: parser.out  parser.py  parsetab.py
tests/: test_parser.py
