[tool.poetry]
name = "mg"
version = "0.1.0"
description = "Muscle Growth DSL"
authors = ["Andreas Borgstad"]
license = "GPL-3.0"
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.13"
ply = "^3.11"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
